k8/stage-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: did-solution-backend
  namespace: common-system
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: did-solution-backend
